--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-    "name": "normalize.styl",
+    "name": "normalize.styl.lite",
     "version": "3.0.3",
-    "main": "normalize.styl",
-    "author": [ "Nicolas Gallagher", "Mathias Brouilly" ],
+    "main": "normalize.styl.lite",
+    "author": [ "Nikita Seleckis" ],
     "ignore": []
 }
