--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "normalize-styl-lite",
-  "version": "3.0.3",
+  "version": "0.0.1",
   "description": "Stylus version of normalize.css",
   "main": "normalize.styl",
   "repository": {
     "type": "git",
-    "url": "https://github.com/seleckis/normalize.styl.git"
+    "url": "https://github.com/seleckis/normalize.styl.lite.git"
   },
   "keywords": [
     "normalize",
@@ -16,9 +16,9 @@
   "author": "Nikita Seleckis <nikita@seleckis.lv> (http://seleckis.lv/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/seleckis/normalize.styl/issues"
+    "url": "https://github.com/seleckis/normalize.styl.lite/issues"
   },
-  "homepage": "https://github.com/seleckis/normalize.styl",
+  "homepage": "https://github.com/seleckis/normalize.styl.lite",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   }
